-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
clientdistro=ubuntu2604
-
3
-
9223372036854775807
https://ime-ddn.atlassian.net/browse/EX-14714
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/dc8a7197-1032-4f6e-82a5-f44755aa7660
test_200a failed with the following error:
stop mds service on onyx-144vm4CMD: onyx-144vm4 grep -c /mnt/lustre-mds3' ' /proc/mounts || trueStopping /mnt/lustre-mds3 (opts:-f) on onyx-144vm4CMD: onyx-144vm4 umount -d -f /mnt/lustre-mds3
Test session details:
clients: https://build.whamcloud.com/job/lustre-b_es-reviews/28904 - 7.0.0-22-generic
servers: https://build.whamcloud.com/job/lustre-b_es-reviews/28904 - 4.18.0-553.123.1.el8_lustre.ddn17.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
conf-sanity test_200a - Timeout occurred after 100 minutes, last suite running was conf-sanity