LU-20459 lnet: save cpuhp state for dead callback cleanup

Change cpuhp_remove_state_nocalls() parameter
from static CPUHP_BP_PREPARE_DYN to dynamic return value.

The cpuhp_setup_state_nocalls() function with CPUHP_BP_PREPARE_DYN
dynamically allocates a state ID within the prepare stage range
and returns the actual allocated state, not the input constant.

The original code discarded the return value from the "dead"
callback registration and later used CPUHP_BP_PREPARE_DYN
directly in cpuhp_remove_state_nocalls(), which may cause
incorrect cleanup if multiple modules use the same dynamic range,
or if some Linux release version (e.g., Ubuntu 26.04)
changed the behaviour of the function. Thus crash the kernel.

This patch adds a static variable lustre_cpu_dead to save the
actual state ID returned by cpuhp_setup_state_nocalls(), ensuring
the correct state is removed during cleanup, consistent with the
handling of lustre_cpu_online for the AP_ONLINE_DYN callback.

Test-Parameters: mdscount=2 mdtcount=4 clientcount=2                 clientdistro=ubuntu2604 serverdistro=el8.10                 testlist=conf-sanity env=ONLY=200a,ONLY_REPEAT=100
Signed-off-by: Xiyang Wang <xiwang@ddn.com>
Change-Id: Iaa741c7921a221076a2035bddee9bd631e56a42e
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67116
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Timothy Day <timday@thelustrecollective.com>